[gd_scene load_steps=15 format=3 uid="uid://dske5xin7ukac"]

[ext_resource type="Script" path="res://Scripts/BossSuperattack.gd" id="1_k5crx"]
[ext_resource type="AudioStream" uid="uid://cbfc1jqp1jjgv" path="res://Sound/terremoot.mp3" id="3_ctxh2"]
[ext_resource type="Texture2D" uid="uid://pre43qc6fck" path="res://Assets/Enemies/Colision.png" id="6_7ovjy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wkoag"]
atlas = ExtResource("6_7ovjy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l7wv"]
atlas = ExtResource("6_7ovjy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xbqq"]
atlas = ExtResource("6_7ovjy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltb80"]
atlas = ExtResource("6_7ovjy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxufj"]
atlas = ExtResource("6_7ovjy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2yk"]
atlas = ExtResource("6_7ovjy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hbxmn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkoag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l7wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xbqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltb80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxufj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2yk")
}],
"loop": true,
"name": &"rocks",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jeall"]
radius = 61.502

[sub_resource type="CircleShape2D" id="CircleShape2D_26moh"]
radius = 25.02

[sub_resource type="CircleShape2D" id="CircleShape2D_nqdtt"]
radius = 17.5071

[sub_resource type="CircleShape2D" id="CircleShape2D_oh6yf"]
radius = 53.584

[node name="bosssuperattack" type="CharacterBody2D" groups=["boss"]]
scale = Vector2(2, 2)
script = ExtResource("1_k5crx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_hbxmn")
animation = &"rocks"

[node name="detecting_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detecting_area"]
shape = SubResource("CircleShape2D_jeall")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_26moh")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -10.0
offset_top = 15.0
offset_right = 190.0
offset_bottom = 42.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="attackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
shape = SubResource("CircleShape2D_nqdtt")

[node name="SuperAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuperAttackArea"]
shape = SubResource("CircleShape2D_oh6yf")

[node name="Cooldown_Timer" type="Timer" parent="."]

[node name="terremotodmg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ctxh2")
volume_db = -17.883

[connection signal="sprite_frames_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="body_entered" from="detecting_area" to="." method="_on_detecting_area_body_entered"]
[connection signal="body_exited" from="detecting_area" to="." method="_on_detecting_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="SuperAttackArea" to="." method="_on_super_attack_area_body_entered"]
[connection signal="body_exited" from="SuperAttackArea" to="." method="_on_super_attack_area_body_exited"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_cooldown_timer_timeout"]
